# rightmove-london-portfolio

./: .cursorrules  .dockerignore  .gcloudignore  .gitignore  ADVANCED_PROMPTS.md  CHANGELOG.md  CHART_FIX_FINAL.md  CHART_INVESTIGATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  LAYOUT_FIX.md  LICENSE  Makefile  PLAN.md  README.md  RESPONSIVE_TABLE_FIX.md  ROADMAP.md  RUNLOG.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SNOWFLAKE_PAT_GUIDE.md  STREAMING_IMPLEMENTATION.md  TABLE_FIX.md  UI_UX_IMPROVEMENTS.md  VEGA_MIGRATION_COMPLETE.md  VERIFICATION_CHECKLIST.md  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  seeds.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gh-pages.yml
agents/: README.md  cortex_analyst_examples.sql  cortex_search_examples.sql  tools_config.yaml
backend/: README.md
backend/cloudflare/: ad.txt  wrangler.toml
docs/: agents.md  app.js  architecture.md  demo.md  index.html  index.md  privacy.html  scraping.md  styles.css  terms.html  transformation.md  wire-up-cortex.md
infra/: docker-compose.yml
infra/cloudrun/: service.yaml
jobs/: entrypoint.py
jobs/shards/: shard_00.csv  shard_01.csv  shard_02.csv  shard_03.csv  shard_04.csv  shard_05.csv  shard_06.csv  shard_07.csv  shard_08.csv  shard_09.csv  shard_10.csv  shard_11.csv  (+88 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pipeline/: README.md  apply_sql.py  csv_to_ndjson.py  gcs_to_snowflake.py  geocode_zones.py  local_rightmove_transform.py
rightmove_project/: README.md  pyproject.toml
rightmove_project/scripts/: format.sh  run_local.sh
rightmove_project/src/rightmove_scraper/: __init__.py  browser.py  cli.py  compliance.py  config.py  discovery.py  extractors.py  models.py  scrape_listing.py  seeds.py  utils.py
rightmove_project/tests/: test_integration_listing.py
scraper/: Dockerfile  README.md  playwright.config.py
scripts/: adaptive_slicer.sh  discover_urls.sh  run_discover_and_scrape.sh  run_scrape.sh
sql/: 00_schema.sql  10_staging_clean.sql  20_transforms_cte.sql
tests/: conftest.py  template.csv  test_extractors.py  test_normalize.py  test_slicer_stub.py
(+30 files in other folders)
